SCSS - Normalize, Default, Fonts

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
 		<link rel="icon" type="image/png" href="/favicon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Pet Planet - магазин товаров для животных</title>
+		
+		<!--предзагрузка шрифтов-->
+		<link rel="preload" href="/fonts/onest-v6-cyrillic_latin-regular.woff2" type="font/woff2" as="font" crossorigin>
+		<link rel="preload" href="/fonts/onest-v6-cyrillic_latin-700.woff2" type="font/woff2" as="font" crossorigin>
+		
+		<link rel="stylesheet" href="scss/index.scss">
 	</head>
 	<body>
 		<header class="header">
@@ -15,11 +21,11 @@
 		</header>
 		
 		<main>
-			<h1 class="">Pet Planet - магазин товаров для животных</h1>
+			<h1 class="visually-hidden">Pet Planet - магазин товаров для животных</h1>
 			
 			<section class="hero">
 				<div class="container">
-					<h2 class="">Товары для твоих любимцев</h2>
+					<h2 class="visually-hidden">Товары для твоих любимцев</h2>
 					<img src="./img/tittle.svg" alt="Товары для твоих любимцев">
 					
 					<p class="hero__text">Большой выбор домиков, лежанок и&nbsp;кормов для кошек и&nbsp;собак</p>
