--- a/src/index.html
+++ b/src/index.html
@@ -55,19 +55,24 @@
 						<h2 class="advantages__title">Наши преимущества</h2>
 						
 						<ul class="advantages__list">
-							<li class="advantages__item">
+							<li class="advantages__item advantages__item_assortment">
 								<h3 class="advantages__subtitle">Широкий ассортимент</h3>
 								<p class="advantages__text">У&nbsp;нас есть все для того, чтобы сделать жизнь вашего любимца комфортной и&nbsp;уютной.</p>
 							</li>
-							<li class="advantages__item">
+							<li class="advantages__item advantages__item_quality">
 								<h3 class="advantages__subtitle">Качество и&nbsp;безопасность</h3>
 								<p class="advantages__text">Мы&nbsp;тщательно отбираем товары для наших клиентов, уделяя особое внимание качеству и&nbsp;безопасности.</p>
 							</li>
-							<li class="advantages__item">
+							<li class="advantages__item advantages__item_personal">
 								<h3 class="advantages__subtitle">Персональный подход</h3>
 								<p class="advantages__text">Мы&nbsp;понимаем, что каждый питомец уникален, поэтому предлагаем вам индивидуальные рекомендации по&nbsp;выбору товаров.</p>
 							</li>
 						</ul>
+					</div>
+					
+					<div class="advantages__count-box">
+						<p class="advantages__count">10</p>
+						<p class="advantages__count-text">магазинов в сети</p>
 					</div>
 				</div>
 			</section>
