--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
 					
 					<div class="advantages__count-box">
 						<p class="advantages__count">10</p>
-						<p class="advantages__count-text">магазинов в сети</p>
+						<p class="advantages__count-text">магазинов в&nbsp;сети</p>
 					</div>
 				</div>
 			</section>
