--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,9 @@
 						
 						<fieldset class="subscribe__field">
 							<input class="subscribe__input" type="email" name="email" placeholder="E-mail">
-							<button class="subscribe__button" type="submit">Отправить</button>
+							<button class="subscribe__button" type="submit">
+								<span class="subscribe__button-text">Отправить</span>
+							</button>
 						</fieldset>
 					</form>
 				</div>
