--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 			<section class="hero">
 				<div class="container">
 					<h2 class="visually-hidden">Товары для твоих любимцев</h2>
-					<img class="hero__title" src="./img/tittle.svg" alt="Товары для твоих любимцев">
+					<img class="hero__title" src="./img/tittle.svg" width="810" height="215" alt="Товары для твоих любимцев">
 					
 					<p class="hero__text">Большой выбор домиков, лежанок и&nbsp;кормов для кошек и&nbsp;собак</p>
 				</div>
