Категории и модальное окно

--- a/src/store.html
+++ b/src/store.html
@@ -114,5 +114,15 @@
 				</address>
 			</div>
 		</footer>
+		
+		<div class="modal-overlay">
+			<div class="modal">
+				<div class="modal_content">
+					<h2>Корзина</h2>
+					<ul class="modal__cart-items"></ul>
+				</div>
+			</div>
+			<button class="modal-overlay_close-button">&times;</button>
+		</div>
 	</body>
 </html>
